capsule error solve
